--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Javascript + DOM</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel = "icon" href =".\YahyaNmini.png" type = "image/x-icon">
 </head>
 <body>
 	<h1 class="">Shopping List</h1>
